--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/34d73n86d59/huntsville/?unit=us" data-label_1="WEATHER" data-font="Courier New" data-mode="Current" data-theme="original" data-basecolor="rgba(31, 86, 124, 0)" data-textcolor="#f0d9d9" >WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/34d73n86d59/huntsville/" data-label_1="HUNTSVILLE" data-label_2="WEATHER" data-font="Jura" data-mode="Current" data-days="3" data-textcolor="#e7a2d0" >HUNTSVILLE WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
